sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: not found: value inverse
        inverse(i,i+1)
        ^AlgCocktailSort1:11: error: not found: value inverse
          inverse(getNombreValeurs()-i,getNombreValeurs()-i-1)
          ^