sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var inversement=false
  while(inversement){
    for (i<-0 to getNombreValeurs()-1){
    	if (plusPetit(i+1,i)){
        inverse(i,i+1)
        inversement=true
      }else{
        if(plusPetit(getNombreValeurs()-i,getNombreValeurs()-i-1)){
          inverse(getNombreValeurs()-i,getNombreValeurs()-i-1)
        	inversement=true
        }
      }
    }
  }
}